--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "nodemon": "^3.1.5"
+    "nodemon": "^3.1.5",
+    "path": "^0.12.7"
   }
 }
